--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+# Node.js
+node_modules/
+dist/
 
-lua
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Editor directories and files
+.vscode/
+.idea/
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+__MACOSX
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
