--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,18 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
+  "description": "Backend del proyecto de administración de fincas",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1659.0",
-    "express": "^4.19.2"
+    "express": "^4.17.1",
+    "aws-sdk": "^2.814.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^26.6.3"
   }
 }
+
