--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,4 @@
-echo "version: 2
+version: 2
 updates:
   - package-ecosystem: 'npm'
     directory: '/'
@@ -8,4 +8,4 @@ updates:
     directory: '/backend'
     schedule:
       interval: 'daily'
-" > .github/dependabot.yml
+
