--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+echo "name: CI/CD
 
 on: [push, pull_request]
 
@@ -22,4 +22,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Remove unnecessary files
       run: rm -rf node_modules && npm cache clean --force
+" > .github/workflows/ci.yml
 
