--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
-echo "name: CI/CD
+cat <<EOT > .github/workflows/ci.yml
+name: CI/CD
 
 on: [push, pull_request]
 
@@ -21,6 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Remove unnecessary files
-      run: rm -rf node_modules && npm cache clean --force
-" > .github/workflows/ci.yml
-
+      run: |
+        rm -rf node_modules
+        npm cache clean --force
+EOT
