--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-cat <<EOT > .github/workflows/ci.yml
 name: CI/CD
 
 on: [push, pull_request]
@@ -14,6 +13,8 @@ jobs:
       with:
         node-version: '14'
     - run: npm install
+    - name: Run Node.js security audit
+      run: npm audit --audit-level=high
     - run: npm test
 
   cleanup:
@@ -25,4 +26,3 @@ jobs:
       run: |
         rm -rf node_modules
         npm cache clean --force
-EOT
