--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "aws-sdk": "^2.1659.0",
-    "express": "^4.19.2"
+    "express": "^4.17.1",
+    "aws-sdk": "^2.814.0"
   },
   "devDependencies": {
     "jest": "^26.6.3"
-  },
-  "directories": {
-    "test": "tests"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  }
 }
