--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,39 @@
   },
   "devDependencies": {
     "jest": "^26.6.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tu_usuario/appMiNiSTRADORES.git"
+  }
+}
+frontend/package.json
+
+json
+Copiar código
+{
+  "name": "frontend",
+  "version": "1.0.0",
+  "description": "Frontend del proyecto de administración de fincas",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.2.3",
+    "tailwindcss": "^2.1.2"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tu_usuario/appMiNiSTRADORES.git"
   }
 }
