--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "frontend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Frontend del proyecto de administración de fincas",
+  "description": "Backend del proyecto de administración de fincas",
   "main": "src/index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node src/index.js",
+    "test": "jest"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.2.3",
-    "tailwindcss": "^2.1.2"
+    "express": "^4.17.1",
+    "aws-sdk": "^2.814.0",
+    "braces": "^3.0.3"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^29.7.0"
   },
   "repository": {
     "type": "git",
