--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,10 @@
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^29.7.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Neiland85/appMiNiSTRADORES.git"
   }
 }
