--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,3 @@
 [submodule "path/to/submodule"]
     path = path/to/submodule
-    url = https://github.com/Neiland85/appMiNiSTRADORES.git
-
-
+    url = https://github.com/username/repository.git
