--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "path/to/submodule"]
-    path = path/to/submodule
-    url = https://github.com/username/repository.git
+[submodule "submodule_path"]
+    path = submodule_path
+    url = https://github.com/Neiland85/submodule-repository.git
