--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,10 @@
-Flask==3.0.3
-requests==2.32.3
+Flask==2.0.1
+Flask-RESTful==0.3.8
+requests==2.25.1
+pytest==6.2.4
+pandas==1.2.4
+numpy==1.20.2
+scikit-learn==0.24.2
+matplotlib==3.4.2
+joblib==1.0.1
+sagemaker==2.45.0
