--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend",
+  "name": "appMiNiSTRADORES",
   "version": "1.0.0",
-  "description": "Frontend del proyecto de administración de fincas",
+  "description": "Frontend for appMiNiSTRADORES",
   "main": "src/index.js",
   "scripts": {
     "start": "react-scripts start",
@@ -12,16 +12,23 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.2.3",
-    "tailwindcss": "^2.1.2",
-    "braces": "^3.0.3"
+    "react-scripts": "4.0.3"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/tu_usuario/appMiNiSTRADORES.git"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
